compiler/tools/fpp-check/test/state_machine_instance/undef_state_machine.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine_instance/undef_state_machine.fpp:3.30
  state machine instance s1: S
                             ^
error: cannot find symbol `S`
note: looking for a state machine here
